Added angular2 main component

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <head>
         <meta charset="utf-8">
         <title>Calculator</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script type="text/javascript" src="./app/dist/bundle.js" charset="utf-8"></script>
     </head>
     <body>
-       <script type="text/javascript" src="./app/dist/bundle.js" charset="utf-8"></script>
+      <calculator>Loading...</calculator>
     </body>
 </html>
