Used css table instead of flex containers

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
         <title>Calculator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
       <calculator>Loading...</calculator>
